loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:5: error: not found: value i
  while (i!=7){
         ^