loopfor.LoopCourse.scala.code
var tour=0
var cote=0

while (tour!=10){
  while (i!=7){
    for (i<-0 to 7){
      avance()
    }
    gauche()
  }
  tour=tour+1
}